--- a/static/css/index.css
+++ b/static/css/index.css
@@ -155,3 +155,19 @@ body {
 #interpolation-image-wrapper img {
   border-radius: 5px;
 }
+
+.sketch-grid {
+    /* margin-top: 10%; */
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(8, minmax(0, 1fr));
+    grid-template-rows: repeat(8, minmax(0, 1fr));
+    gap: 0px;
+  }
+  
+  .sketch-grid img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    cursor: "pointer"
+  }  
